# OS_lab2_threads

./: .gitignore  CMakeLists.txt
src/: core.cpp  core.h  main.cpp  threads.cpp  threads.h  win_error.cpp  win_error.h
tests/: test_core.cpp  test_core_gtest.cpp
